chore: update documentation for api
