# internal/entity/domain/category.go
@@ -7,3 +7,13 @@ type Category struct {
 	Name        string `json:"name"`
 	Description string `json:"description"`
 }
+
+type CategoryRegister struct {
+	Name        string `json:"name" form:"name" validate:"required"`
+	Description string `json:"description" form:"description" validate:"required"`
+}
+
+type CategoryUpdate struct {
+	Name        string `json:"name" form:"name" validate:"required"`
+	Description string `json:"description" form:"description" validate:"required"`
+}
